--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="gambarsaya">
-          <img src="./img/Group 117.png" alt="gambar saya" />
+          <img class="gambarsaya"src="./img/Group 117.png" alt="gambar saya" />
         </div>
       </div>
       <div class="formarquee">
