--- a/index.html
+++ b/index.html
@@ -11,72 +11,31 @@
     <link rel="stylesheet" href="./css/style.css" />
 
     <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Poor+Story&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kanit&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Kanit&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <header>
-      <img src="./img/Group 12.png" alt="logo" class="logo" />
-      <!-- navbar -->
+      <div class="portofolio"><span style="color: #FF55BB; font-size: 21.75px; font-family: Clash Display; font-weight: 300; word-wrap: break-word">Porto</span><span style="color: #FF55BB; font-size: 21.75px; font-family: Clash Display; font-weight: 500; word-wrap: break-word">Folio</span></div>
       <nav>
-        <a> Home </a>
-        <a href="./aboutme.html"> About Me </a>
-        <a href="./myprojects.html"> My Projects </a>
+        <a> AboutMe </a>
+        <a> Projects </a>
+        <a> Skills </a>
       </nav>
     </header>
     <main>
-      <div class="container-content">
-        <div class="isinyateks">
-          <div class="judul">
-            <p class="judulkecil">Hi there! my name is</p>
-            <h1 class="judulbesar">
-              Muhammad<br />
-              Aisy Afrah
-            </h1>
-          </div>
-          <div class="tekstambah">
-            <p>
-              Ini adalah web portofolio buatan saya<br />dan ini pertama kali
-              saya membuat web<br />
-              Silahkan membaca semuanyaa
-            </p>
-          </div>
-          <div class="sosmed">
-            <a href="https://www.instagram.com/afroisy/"target="_blank"
-              ><img src="./img/Group 63.png" class="instagram"
-            /></a>
-            <a href="https://www.linkedin.com/in/aisy-afrah-687b5924a/"target="_blank" 
-              ><img src="./img/Group 64.png" class="linkedin"
-            /></a>
-            <a href="https://github.com/AisyAfr"target="_blank"
-              ><img src="./img/Group 65.png" class="github"
-            /></a>
-          </div>
+      <div class="container">
+        <div class="text-center">
+          <div class="hi-there">Hi There!</div>
+          <div class="enjoy">Enjoyyy</div>
+          <button type="button" class="letsgo">Lets Goooo!</button>
         </div>
-        <div class="gambarsaya">
-          <img class="gambarsaya"src="./img/Group 117.png" alt="gambar saya" />
-        </div>
-      </div>
-      <div class="formarquee">
-        <marquee
-          scrollamount="10"
-          behavior="scroll"
-          width="260"
-          height="40"
-          class="walkingtext"
-          >Selamat Datang di Portofolio Sayaa</marquee
-        >
       </div>
     </main>
   </body>
