--- a/index.html
+++ b/index.html
@@ -10,30 +10,25 @@
     <!-- local css -->
     <link rel="stylesheet" href="./css/style.css" />
 
-    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Kanit&display=swap" rel="stylesheet">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Kanit&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     
   </head>
   <body>
     <header>
-      <div class="portofolio"><span style="color: #FF55BB; font-size: 21.75px; font-family: Clash Display; font-weight: 300; word-wrap: break-word">Porto</span><span style="color: #FF55BB; font-size: 21.75px; font-family: Clash Display; font-weight: 500; word-wrap: break-word">Folio</span></div>
+      <div class="portofolio"><span style="color: #FF55BB; font-size: 21.75px; font-family: 'Paytone One', sans-serif;; font-weight: 400; word-wrap: break-word">Porto</span><span style="color: #FF55BB; font-size: 21.75px; font-family: 'Paytone One', sans-serif;; font-weight: 800; word-wrap: break-word">Folio</span></div>
       <nav>
         <a> AboutMe </a>
-        <a> Projects </a>
         <a> Skills </a>
+        <a> Projects </a>
       </nav>
     </header>
     <main>
       <div class="container">
         <div class="text-center">
           <div class="hi-there">Hi There!</div>
-          <div class="enjoy">Enjoyyy</div>
+          <div class="enjoy">Enjoyyy....</div>
           <button type="button" class="letsgo">Lets Goooo!</button>
         </div>
       </div>
